--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                 <a href="{{ url_for('bookings_page') }}" class="text-gray-600 hover:text-black">My Bookings</a>
             </li>
               <li>
-                <a href="{{ url_for('scooters') }}" class="button text-black px-4 py-2 rounded hover:text-white hover:border-2 hover:border-black">Book Now</a>
+                <a href="{{ url_for('scooters') }}" class="button font-bold text-black px-4 py-1 border-2 border-black rounded hover:text-white hover:border-yellow-300 hover:bg-yellow-300">Book Now</a>
             </li>
           </ul>
       </div>
